[tool.poetry]
name = "qalx-orcaflex-examples"
version = "0.1.0"
description = "A set of tutorial-style examples to get started with qalx-orcaflex"
authors = ["Armand Rego <armand@agiletek.co.uk>", "Steven Rossiter <steve@agiletek.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "qalx_orcaflex_examples"}]

[tool.poetry.dependencies]
python = "^3.8"
qalx-orcaflex = "^0.2.3"
pandas = "^1.5.1"
XlsxWriter = "^3.0.3"
openpyxl = "^3.0.10"
python-docx = "^0.8.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
